# mcu-inference-bench

./: README.md
esp32p4/: CMakeLists.txt  README.md
esp32p4/main/: CMakeLists.txt  bench.h  bench_cache.c  bench_dma.c  bench_fp32.c  bench_int4.c  bench_matmul.c  bench_memory.c  bench_model.c  bench_pie.c  bench_popcount.c  main.c  pie_kernels.S
